k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: agent
  namespace: stash
spec:
  selector:
    app: agent
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
    name: http
  type: ClusterIP
